# data-flow-rs

./: .env.dev  Cargo.toml  README.md
.github/workflows/: ci.yml  rust-ci.yml
configuration/: base.yaml  production.yaml
data/: 2
src/: configuration.rs  downloader.rs  lib.rs  startup.rs  streaming_helpers.rs
