[package]
name = "data-flow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3.5"
ethers = { version = "2.0", features = ["rustls","ws"] }
futures = "0.3"
tokio = { version = "1.28.1", features = ["full"]}
tokio-stream = { version = "0.1.14", features = ["sync"]}
serde = { version = "1.0.159", features = ["derive","rc"] }
serde_json = "1.0.95"
colored = "2"

[dev-dependencies]
mockall = "0.11.4"
