[package]
name = "data-flow-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/bin/eth_history_download.rs"
name = "history_download_and_subscribe"

[dependencies]
anyhow = "1.0"
config = "0.13"
ethers = { version = "2.0", features = ["rustls", "ws"] }
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1", features = ["derive", "rc"] }
serde-aux = "4.2.0"
serde_json = "1"
colored = "2"
dotenv = "0.15.0"


[dev-dependencies]
mockall = "0.11.4"
